[project]
name = "blog-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "nh3>=0.3.5",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.48.0",
]
